--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -35,18 +35,20 @@ jobs:
       with:
         name: code
         path: .
-  Docker-image:
+  build-and-push-latest:
     runs-on: ubuntu-latest
-    needs: [Build]
     permissions:
       packages: write
     steps:
-    - name: Download code
-      uses: actions/download-artifact@v3
-      with:
-        name: code
-        path: .
-    - name: build docker
-      run: chmod +x ci/build-docker.sh && ci/build-docker.sh
-    - name: push docker
-      run: chmod +x ci/push-docker.sh && ci/push-docker.sh
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: app
+          push: true
+          tags: ghcr.io/${{ github.actor }}/micronaut-app:1.0-${{ github.sha }},ghcr.io/${{ github.actor }}/micronaut-app:latest
